Fix popup window title color always being black with custom titlebar.

This patch changes the window title color when the titlebar is painted.
This ensures that the proper contrasting color is picked for both active
and inactive states. The color is also made partially transparent when
the window is inactive.

The end result is that the window title should always be the same color
as the window caption button symbols (unless a theme uses a button
background with the opposite luma of the titlebar).

Bug: 821980
Change-Id: Ib84edf0b9d2bb9415cd293d3683915b9d64b40be
Reviewed-on: https://chromium-review.googlesource.com/979035
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545933}
Former-commit-id: 70208163c827b40fb0e6ddfb37682b49fe54e492